--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-calendar": "~13.0.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-intent-launcher": "~11.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
@@ -33,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-fontsize": "^0.5.1",
