--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/drawer": "^6.7.2",
     "expo": "^52.0.4",
     "expo-calendar": "~14.0.2",
@@ -24,6 +25,7 @@
     "expo-font": "~13.0.1",
     "expo-intent-launcher": "~12.0.1",
     "expo-linking": "~7.0.2",
+    "expo-notifications": "~0.29.8",
     "expo-router": "~4.0.2",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.7",
